# RoboMaster

./: Hello.txt
Assignment/Assignment_2/attachments/: Python.html  Python.ipynb
Assignment/Assignment_2/code/: Logistic_Regression.py
Assignment_1/attachments/: Assignment_1.md
Assignment_1/code/Code_1/: Invitation.py
Assignment_1/code/Code_2/: Intention.py  students.txt
Assignment_2/code/: Linear_Regression.py
Energy mechanism_data set/labels/: EM (1).txt  EM (10).txt  EM (100).txt  EM (101).txt  EM (102).txt  EM (103).txt  EM (104).txt  EM (105).txt  EM (106).txt  EM (107).txt  EM (108).txt  EM (109).txt  EM (11).txt  EM (110).txt  EM (111).txt  EM (112).txt  EM (113).txt  EM (114).txt  EM (115).txt  EM (116).txt  EM (117).txt  EM (118).txt  EM (119).txt  EM (12).txt  EM (120).txt  EM (13).txt  EM (14).txt  EM (15).txt  EM (16).txt  EM (17).txt  EM (18).txt  EM (19).txt  EM (2).txt  EM (20).txt  EM (21).txt  EM (22).txt  EM (23).txt  EM (24).txt  EM (25).txt  EM (26).txt  (+80 more)
Energy mechanism_data set/标注教程与示例/: 先看此文档再看视频.docx
Energy mechanism_data set/标注教程与示例/样例/: 131.xml  287.xml  31.xml  373.xml  READ ME.docx
Intramural competition/Code/excerpt/SPC/: CMakeLists.txt  SPC.cpp
Intramural competition/Code/tensorrtx-yolov5/yolov5-test-1.4(TX2)/: CMakeLists.txt  yolov5-test-1.4.md  yolov5_det.cpp
Intramural competition/Code/tensorrtx-yolov5/yolov5-test-1.4(TX2)/src/: postprocess.cpp  postprocess.h
Intramural competition/Data Set/label-green/: green (1).txt  green (10).txt  green (101).txt  green (104).txt  green (106).txt  green (107).txt  green (110).txt  green (111).txt  green (12).txt  green (13).txt  green (14).txt  green (18).txt  green (19).txt  green (2).txt  green (22).txt  green (25).txt  green (26).txt  green (27).txt  green (29).txt  green (3).txt  green (31).txt  green (32).txt  green (36).txt  green (37).txt  green (38).txt  green (4).txt  green (43).txt  green (45).txt  green (46).txt  green (49).txt  green (5).txt  green (51).txt  green (55).txt  green (56).txt  green (57).txt  green (58).txt  green (60).txt  green (61).txt  green (62).txt  green (63).txt  (+18 more)
Intramural competition/Data Set/label-red/: red (1).txt  red (10).txt  red (11).txt  red (12).txt  red (15).txt  red (19).txt  red (20).txt  red (23).txt  red (25).txt  red (27).txt  red (32).txt  red (34).txt  red (35).txt  red (39).txt  red (4).txt  red (40).txt  red (41).txt  red (43).txt  red (45).txt  red (46).txt  red (47).txt  red (51).txt  red (52).txt  red (53).txt  red (56).txt  red (58).txt  red (61).txt  red (63).txt  red (64).txt  red (65).txt  red (66).txt  red (69).txt  red (71).txt  red (72).txt  red (73).txt  red (74).txt  red (75).txt  red (76).txt  red (77).txt  red (78).txt  (+13 more)
Intramural competition/Data Set/label-tmp/: 1 (1).txt  1 (10).txt  1 (11).txt  1 (12).txt  1 (13).txt  1 (14).txt  1 (15).txt  1 (16).txt  1 (17).txt  1 (18).txt  1 (19).txt  1 (2).txt  1 (20).txt  1 (21).txt  1 (22).txt  1 (23).txt  1 (24).txt  1 (25).txt  1 (26).txt  1 (27).txt  1 (28).txt  1 (29).txt  1 (3).txt  1 (30).txt  1 (31).txt  1 (32).txt  1 (33).txt  1 (34).txt  1 (35).txt  1 (36).txt  1 (37).txt  1 (38).txt  1 (39).txt  1 (4).txt  1 (40).txt  1 (41).txt  1 (42).txt  1 (43).txt  1 (44).txt  1 (45).txt  (+22 more)
Intramural competition/Data Set/label-tmp2/: 2 (1).txt  2 (10).txt  2 (100).txt  2 (101).txt  2 (103).txt  2 (104).txt  2 (105).txt  2 (106).txt  2 (107).txt  2 (108).txt  2 (109).txt  2 (11).txt  2 (111).txt  2 (112).txt  2 (113).txt  2 (114).txt  2 (115).txt  2 (116).txt  2 (117).txt  2 (118).txt  2 (119).txt  2 (12).txt  2 (120).txt  2 (121).txt  2 (122).txt  2 (123).txt  2 (124).txt  2 (125).txt  2 (126).txt  2 (127).txt  2 (13).txt  2 (14).txt  2 (15).txt  2 (16).txt  2 (17).txt  2 (18).txt  2 (19).txt  2 (2).txt  2 (20).txt  2 (21).txt  (+85 more)
Intramural competition/Data Set/label-tmp3/: 3 (10).txt  3 (101).txt  3 (102).txt  3 (109).txt  3 (117).txt  3 (119).txt  3 (121).txt  3 (122).txt  3 (17).txt  3 (22).txt  3 (23).txt  3 (26).txt  3 (32).txt  3 (41).txt  3 (46).txt  3 (53).txt  3 (54).txt  3 (55).txt  3 (56).txt  3 (66).txt  3 (67).txt  3 (68).txt  3 (70).txt  3 (75).txt  3 (84).txt  3 (87).txt  3 (88).txt  3 (9).txt  4 (1).txt  4 (104).txt  4 (107).txt  4 (113).txt  4 (115).txt  4 (19).txt  4 (20).txt  4 (21).txt  4 (31).txt  4 (4).txt  4 (40).txt  4 (42).txt  (+13 more)
Intramural competition/Data Set/label-tmp4/: 4 (1).txt  4 (11).txt  4 (12).txt  4 (14).txt  4 (15).txt  4 (16).txt  4 (17).txt  4 (2).txt  4 (22).txt  4 (25).txt  4 (26).txt  4 (30).txt  4 (31).txt  4 (32).txt  4 (36).txt  4 (43).txt  4 (44).txt  4 (46).txt  4 (48).txt  4 (5).txt  4 (51).txt  4 (53).txt  4 (57).txt  4 (58).txt  4 (61).txt  4 (64).txt  4 (67).txt  4 (69).txt  4 (70).txt  4 (71).txt  4 (73).txt  4 (8).txt  4 (9).txt
Intramural competition/Data Set/label-tmp5/: 3 (100).txt  3 (103).txt  3 (105).txt  3 (106).txt  3 (108).txt  3 (110).txt  3 (123).txt  3 (128).txt  3 (130).txt  3 (136).txt  3 (137).txt  3 (14).txt  3 (140).txt  3 (141).txt  (+222 more)
(+55 files in other folders)
